--- a/Resume.css
+++ b/Resume.css
@@ -74,7 +74,7 @@ a:hover {
 	margin-top: 50px;
 	width: 70%;
 	height: 900px;
-	background-color: #46FF33;
+	background-color: cyan;
 	margin-bottom: 10px;
 }
 
